--- a/FamilyTree.Modules.Person/Views/CreateMotherView.xaml
+++ b/FamilyTree.Modules.Person/Views/CreateMotherView.xaml
@@ -18,8 +18,10 @@
             <RowDefinition Height="1*" />
             <RowDefinition Height="2*" />
             <RowDefinition Height="2*" />
+            <RowDefinition Height="2*" />
             <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
+
         <Label Grid.Row="0"
                Grid.ColumnSpan="5"
                Content="Személy létrehozása"
@@ -27,8 +29,25 @@
                VerticalContentAlignment="Center"
                FontSize="22"
                FontWeight="Bold" />
+
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="9*" />
+                <RowDefinition Height="1*" />
+            </Grid.RowDefinitions>
+
+            <Image Source="{Binding NewPerson.Image}"
+                   Height="150"
+                   Width="150"
+                   Grid.Row="0" />
+
+            <Button Grid.Row="1"
+                    Content="+"
+                    Command="{Binding SelectPictureCommand}" />
+        </Grid>
+
         <Grid Margin="10"
-              Grid.Row="2">
+              Grid.Row="3">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
@@ -59,8 +78,14 @@
             </StackPanel>
         </Grid>
 
+        <Image Source="{Binding SelectedPerson.Image}"
+               Height="150"
+               Width="150"
+               Grid.Row="1"
+               Grid.Column="2"/>
+
         <Grid Margin="10"
-              Grid.Row="2"
+              Grid.Row="3"
               Grid.Column="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
@@ -83,17 +108,18 @@
                         Orientation="Horizontal"
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center">
-                <RadioButton GroupName="PartnerGender"
+                <RadioButton GroupName="MotherGender"
                              IsEnabled="False"
                              IsChecked="{Binding SelectedPerson.Gender, Converter={StaticResource btg}, ConverterParameter={x:Static business:GenderType.Male}}"
                              Content="Férfi" />
-                <RadioButton GroupName="PartnerGender"
+                <RadioButton GroupName="MotherGender"
                              IsEnabled="False"
                              IsChecked="{Binding SelectedPerson.Gender, Converter={StaticResource btg}, ConverterParameter={x:Static business:GenderType.Female}}"
                              Content="Nő" />
             </StackPanel>
         </Grid>
-        <Button Grid.Row="3"
+
+        <Button Grid.Row="4"
                 Grid.ColumnSpan="5"
                 Content="Mentés"
                 Margin="10"
@@ -101,7 +127,7 @@
 
         <Grid Margin="10"
               Grid.Column="1"
-              Grid.Row="2">
+              Grid.Row="3">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
