--- a/FamilyTree.Modules.Main/Views/NavigationMenu.xaml
+++ b/FamilyTree.Modules.Main/Views/NavigationMenu.xaml
@@ -2,17 +2,30 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-             xmlns:prism="http://prismlibrary.com/"             
+             xmlns:fa="http://schemas.fontawesome.io/icons/"
+             xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True">
-    <ListView x:Name="menuItems" ItemsSource="{Binding MenuItems}">
+    <ListView x:Name="menuItems"
+              HorizontalAlignment="Stretch"
+              VerticalAlignment="Center"
+              Background="Transparent"
+              BorderBrush="Transparent"
+              ItemsSource="{Binding MenuItems}">
         <i:Interaction.Triggers>
             <i:EventTrigger EventName="MouseLeftButtonUp">
-                <i:InvokeCommandAction Command="{Binding SelectCommand}" CommandParameter="{Binding ElementName=menuItems, Path=SelectedItem}"/>
+                <i:InvokeCommandAction Command="{Binding SelectCommand}"
+                                       CommandParameter="{Binding ElementName=menuItems, Path=SelectedItem}" />
             </i:EventTrigger>
         </i:Interaction.Triggers>
         <ListView.ItemTemplate>
             <DataTemplate>
-                <TextBlock Text="{Binding Caption}"/>
+                <StackPanel Orientation="Horizontal">
+                    <fa:FontAwesome FontSize="24"
+                                    Foreground="White"
+                                    Icon="{Binding Icon}" />
+                    <TextBlock FontSize="24"
+                               Text="{Binding Caption}" />
+                </StackPanel>
             </DataTemplate>
         </ListView.ItemTemplate>
     </ListView>
