--- a/FamilyTree.Modules.Person/Views/BackPersonView.xaml
+++ b/FamilyTree.Modules.Person/Views/BackPersonView.xaml
@@ -1,10 +1,14 @@
 ﻿<UserControl x:Class="FamilyTree.Modules.Person.Views.BackPersonView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:prism="http://prismlibrary.com/"             
+             xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True">
-    <StackPanel Orientation="Horizontal">
-        <Button Width="100" Height="75" Content="Vissza" Command="{Binding NavigateBackCommand}" />
+    <StackPanel Orientation="Horizontal"
+                Style="{StaticResource func_bar_color}">
+        <Button Width="100"
+                Height="75"
+                Content="Vissza"
+                Command="{Binding NavigateBackCommand}" />
 
     </StackPanel>
 </UserControl>
