--- a/FamilyTree/FamilyTree/App.xaml
+++ b/FamilyTree/FamilyTree/App.xaml
@@ -1,9 +1,110 @@
 ﻿<prism:PrismApplication x:Class="FamilyTree.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:FamilyTree"
-             xmlns:prism="http://prismlibrary.com/" >
+                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                        xmlns:local="clr-namespace:FamilyTree"
+                        xmlns:prism="http://prismlibrary.com/"
+                        xmlns:ui="http://schemas.modernwpf.com/2019">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ui:ThemeResources />
+                <ui:XamlControlsResources />
+            </ResourceDictionary.MergedDictionaries>
+
+            <!-- Defaults -->
+            <!-- Button -->
+            <Style TargetType="{x:Type Button}">
+                <Setter Property="Background"
+                        Value="Black" />
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type Button}">
+                            <Border Background="{TemplateBinding Background}">
+                                <ContentPresenter HorizontalAlignment="Center"
+                                                  VerticalAlignment="Center" />
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+                <Style.Triggers>
+                    <Trigger Property="IsMouseOver"
+                             Value="True">
+                        <Setter Property="Background"
+                                Value="#0c0032" />
+                    </Trigger>
+                    <Trigger Property="IsEnabled"
+                             Value="False">
+                        <Setter Property="Background"
+                                Value="Gray" />
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
+            
+            <!-- Navigation panel -->
+            <Style TargetType="ListView">
+                
+            </Style>
+
+            <!-- Text -->
+            <Style TargetType="{x:Type TextBlock}">
+                <Setter Property="FontFamily"
+                        Value="Aharoni" />
+                <Setter Property="Foreground"
+                        Value="White" />
+            </Style>
+
+            <!-- Explicit styles -->
+
+            <!--#region Text -->
+            <!-- Navigation bar -->
+            <Style x:Key="nav_bar_font"
+                   TargetType="TextBlock">
+                <Setter Property="FontSize"
+                        Value="32" />
+            </Style>
+
+            <!-- Function bar -->
+            <Style x:Key="func_bar_font"
+                   TargetType="TextBlock">
+                <Setter Property="FontSize"
+                        Value="24" />
+            </Style>
+
+            <!-- Control title -->
+            <Style x:Key="control_title"
+                   TargetType="TextBlock">
+                <Setter Property="FontSize"
+                        Value="28" />
+            </Style>
+
+            <!-- Control text -->
+            <Style x:Key="control_text"
+                   TargetType="TextBlock">
+                <Setter Property="FontSize"
+                        Value="20" />
+            </Style>
+
+            <!--#endregion-->
+
+            <!--#region Color -->
+
+            <!-- Nav bar  -->
+            <Style x:Key="nav_bar_color"
+                   TargetType="ListView">
+                <Setter Property="Background"
+                        Value="#3500D3" />
+            </Style>
+
+            <!-- Function bar -->
+            <Style x:Key="func_bar_color">
+                <Style.Resources>
+                    <Style TargetType="StackPanel">
+                        <Setter Property="Background"
+                                Value="Black" />
+                    </Style>
+                </Style.Resources>
+            </Style>
+            <!--#endregion-->
+        </ResourceDictionary>
     </Application.Resources>
 </prism:PrismApplication>
