--- a/FamilyTree/FamilyTree/Views/MainWindow.xaml
+++ b/FamilyTree/FamilyTree/Views/MainWindow.xaml
@@ -4,21 +4,45 @@
         xmlns:prism="http://prismlibrary.com/"
         prism:ViewModelLocator.AutoWireViewModel="True"
         xmlns:core="clr-namespace:FamilyTree.Core;assembly=FamilyTree.Core"
-        Title="{Binding Title}" Height="350" Width="525" >
+        Title="{Binding Title}"
+        Height="350"
+        Width="525">
     <DockPanel>
-        <Grid DockPanel.Dock="Left">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="2*"/>
-                <RowDefinition Height="3*"/>
-            </Grid.RowDefinitions>
-
-            <Button Command="{Binding UselessCommand}"/>
-
-            <ContentControl MinWidth="250" Grid.Row="1"
-                            prism:RegionManager.RegionName="{x:Static core:RegionNames.NavigationRegion}" />
+        <Grid MinWidth="250"
+              DockPanel.Dock="Left">
+            <Grid.Background>
+                <LinearGradientBrush StartPoint="0.5,0"
+                                     EndPoint="0.5,1">
+                    <GradientStop Color="#0c0032"
+                                  Offset="0.0" />
+                    <GradientStop Color="#3500d3"
+                                  Offset="1.0" />
+                </LinearGradientBrush>
+            </Grid.Background>
+            <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.NavigationRegion}" />
         </Grid>
-        <ContentControl MinHeight="75"
-            DockPanel.Dock="Top" prism:RegionManager.RegionName="{x:Static core:RegionNames.FunctionRegion}" />
-        <ContentControl DockPanel.Dock="Left" prism:RegionManager.RegionName="{x:Static core:RegionNames.ContentRegion}" />
+
+        <Grid MinHeight="75"
+              DockPanel.Dock="Top"
+              Background="Black">
+            <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.FunctionRegion}" />
+        </Grid>
+
+        <Grid DockPanel.Dock="Left"
+              Background="#282828">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="3*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="3*" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <ContentControl Grid.Row="1"
+                            Grid.Column="1"
+                            prism:RegionManager.RegionName="{x:Static core:RegionNames.ContentRegion}" />
+        </Grid>
     </DockPanel>
 </Window>
