--- a/FamilyTree.Modules.FamilyTree/Views/BackFamilyTreeView.xaml
+++ b/FamilyTree.Modules.FamilyTree/Views/BackFamilyTreeView.xaml
@@ -1,10 +1,22 @@
 ﻿<UserControl x:Class="FamilyTree.Modules.FamilyTree.Views.BackFamilyTreeView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:prism="http://prismlibrary.com/"             
+             xmlns:fa="http://schemas.fontawesome.io/icons/"
+             xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True">
-    <StackPanel Style="{StaticResource func_bar_color}" Orientation="Horizontal">
-        <Button Width="100" Height="75" Content="Vissza" Command="{Binding NavigateBackCommand}" />
+    <StackPanel Style="{StaticResource func_bar_color}"
+                Orientation="Horizontal">
+        <Button Width="100"
+                Height="75"
+                Command="{Binding NavigateBackCommand}">
+            <StackPanel Orientation="Horizontal">
+                <fa:FontAwesome Icon="ArrowLeft"
+                                Foreground="White"
+                                FontSize="20" />
+                <TextBlock Text=" Vissza"
+                           FontSize="20" />
+            </StackPanel>
+        </Button>
 
     </StackPanel>
 </UserControl>
