--- a/FamilyTree.Modules.FamilyTree/Views/ListFamilyTreeView.xaml
+++ b/FamilyTree.Modules.FamilyTree/Views/ListFamilyTreeView.xaml
@@ -2,29 +2,39 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-             xmlns:prism="http://prismlibrary.com/"             
+             xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True">
     <DockPanel LastChildFill="True">
-        <Label DockPanel.Dock="Top" Content="Családfák"/>
-        <Button DockPanel.Dock="Top" Content="Frissít" Command="{Binding GetTreesCommand}"/>
-        <ListView ItemsSource="{Binding Trees}" SelectedItem="{Binding FamilyTree}">
+        <Label DockPanel.Dock="Top"
+               Content="Családfák"
+               FontSize="24" />
+        <ListView ItemsSource="{Binding Trees}"
+                  SelectedItem="{Binding FamilyTree}"
+                  BorderThickness="0"
+                  Background="Transparent">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
-                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                    <Setter Property="HorizontalContentAlignment"
+                            Value="Stretch" />
                 </Style>
             </ListView.ItemContainerStyle>
             <ListView.ItemTemplate>
                 <DataTemplate DataType="Business.FamilyTree">
-                    <Grid>
+                    <Grid Margin="20">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="3*"/>
-                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
 
                         <TextBlock Text="{Binding Name}"
-                                   Grid.Column="0"/>
+                                   Grid.Column="0"
+                                   FontSize="16"
+                                   HorizontalAlignment="Center" />
+
                         <TextBlock Text="{Binding People.Count}"
-                                   Grid.Column="1"/>
+                                   Grid.Column="1"
+                                   FontSize="16"
+                                   HorizontalAlignment="Center" />
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
