--- a/FamilyTree.Modules.FamilyTree/Views/CreateFamilyTreeView.xaml
+++ b/FamilyTree.Modules.FamilyTree/Views/CreateFamilyTreeView.xaml
@@ -2,28 +2,40 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-             xmlns:prism="http://prismlibrary.com/"             
+             xmlns:fa="http://schemas.fontawesome.io/icons/"
+             xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True"
-             Height="200" Width="200" Background="White">
+             MaxHeight="250"
+             MaxWidth="250">
     <Grid Margin="10">
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
         <Label Grid.Row="0"
-               Content="Családfa létrehozása" HorizontalContentAlignment="Center"
-               FontSize="17" FontWeight="Bold"/>
+               Content="Családfa létrehozása"
+               HorizontalContentAlignment="Center"
+               FontSize="24"
+               FontWeight="Bold"/>
         <Label Grid.Row="1"
                Margin="10"
-               Content="Családfa neve"/>
+               Content="Családfa neve" />
         <TextBox Grid.Row="2"
-                 Margin="10" Text="{Binding FamilyTreeName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                 Margin="10"
+                 Text="{Binding FamilyTreeName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
         <Button Grid.Row="3"
                 Margin="10"
-                Content="Mentés" Command="{Binding SubmitCommand}"/>
+                Command="{Binding SubmitCommand}">
+            <StackPanel Margin="5" Orientation="Horizontal">
+                <fa:FontAwesome Icon="Save"
+                                FontSize="20"
+                                Foreground="White" />
+                <TextBlock Text=" Mentés" FontSize="20" />
+            </StackPanel>
+        </Button>
 
     </Grid>
 </UserControl>
